Bug 124196 - Impossible to customize keyboard shortcuts
Summary: Impossible to customize keyboard shortcuts
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Customize-Dialog-Keyboard
  Show dependency treegraph
 
Reported: 2019-03-19 07:50 UTC by Mike Kaganski
Modified: 2019-03-22 12:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
crash when trying to save (keyboard?) config to key_1.cfg (106.50 KB, image/jpeg)
2019-03-22 07:10 UTC, b.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-03-19 07:50:08 UTC
Since https://git.libreoffice.org/core/+/3a42ee3284df7020ef111293a4d11148c1bf3a50, trying to customize shortcuts shows as if all commands have all key combinations assigned, which disables customization. See https://ask.libreoffice.org/en/question/187402.
Comment 1 Xisco Faulí 2019-03-19 08:58:18 UTC
Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2019-03-19 16:04:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d86739e906cc8ef2051c2bb288060d62d87066e1%5E%21

Resolves: tdf#124196 impossible to customize keyboard shortcuts

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 b. 2019-03-22 07:10:36 UTC
Created attachment 150170 [details]
crash when trying to save (keyboard?) config to key_1.cfg

assigning keys works better now (ver. 2019-03-22), thanks, 

the issue not being able to save the configuration as reported in my question 

https://ask.libreoffice.org/en/question/187402/is-it-possible-to-assign-keyboard-shortcuts-working-for-dev-version/

remains, see attached screenshot, crash when trying to save (keyboard?) config to key_1.cfg in subdir of user ...
Comment 4 Mike Kaganski 2019-03-22 07:12:55 UTC
(In reply to b. from comment #3)

Thanks for the report;
please file a new issue for this different problem. This issue is specifically about a regression with wrong assigned keys shown; and it is fixed.
Comment 5 Mike Kaganski 2019-03-22 08:29:41 UTC
(In reply to b. from comment #3)

@Caolan: looks like all GetTabDialog() and friends should be audited when welding ;-)
Comment 6 Commit Notification 2019-03-22 11:41:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/17fa95839c8942412c9fa2338eb271ae48401980%5E%21

Related: tdf#124196 fix parent-wait crash in customize dialog

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.