Resolves: tdf#124196 impossible to customize keyboard shortcuts

Change-Id: Idae750fe2e648d5ae15a691c02a53985d88f90f3
Reviewed-on: https://gerrit.libreoffice.org/69423
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>